--- a/normalize.css
+++ b/normalize.css
@@ -14,10 +14,13 @@ main {
   display: block;
 }
 
-/* fix h1 margin and font size properties removing irregular changes in section/article parents  */
+/* fix h1, h2 font size properties removing irregular changes in section/article parents  */
 h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
+  font-size: 2rem;
+}
+
+h2 {
+  font-size: 1.5rem;
 }
 
 /* remove anchor backgrounds in IE */
